--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,9 @@ name: project CICD flow
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master","release" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "release" ]
 
 jobs:
   build:
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '1.8'
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
           cache: maven
       - name: Build with Maven
         run: mvn clean install
